--- a/mobile-risk-zone/package.json
+++ b/mobile-risk-zone/package.json
@@ -18,11 +18,13 @@
     "@react-navigation/native": "^5.0.0",
     "@react-navigation/stack": "^5.0.0",
     "@react-navigation/web": "~1.0.0-alpha.9",
-    "expo": "~37.0.3",
+    "d3": "^5.15.1",
+    "expo": "^37.0.3",
     "expo-asset": "~8.1.3",
     "expo-constants": "~9.0.0",
     "expo-font": "~8.1.0",
     "expo-location": "~8.1.0",
+    "expo-updates": "~0.1.0",
     "expo-web-browser": "~8.1.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
