feat: synch with live data server

--- a/forward-server/package.json
+++ b/forward-server/package.json
@@ -11,6 +11,7 @@
     "csvtojson": "^2.0.10",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "qs": "^6.9.3"
+    "qs": "^6.9.3",
+    "uuid": "^7.0.3"
   }
 }
