--- a/backend/Makefile
+++ b/backend/Makefile
@@ -2,7 +2,7 @@ PROJECT = backend
 PROJECT_DESCRIPTION = New project
 PROJECT_VERSION = 0.1.0
 
-DEPS = cowboy
+DEPS = cowboy jsone
 dep_cowboy_commit = master
 
 include erlang.mk 
